--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-session": "^1.3.1",
     "express-simple-firewall": "1.0.x",
     "express-simple-router": "0.0.x",
+    "faker": "^4.1.0",
     "json-api": "2.x.x",
     "mongoose": "4.0.x",
     "path-to-regexp": "0.1.2",
